
syntax = "proto3";

option java_multiple_files = true;
option java_package = "datatier.protobuf";

message DebitCard {
  int64 cardId = 1;
  int64 cardNumber = 2;
  string expiryDate = 3;
  int32 cvv = 4;
}
